unpackaged/main/default/objects/Reports_Setting__mdt/Reports_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Reports Setting</label>
    <pluralLabel>Reports Settings</pluralLabel>
</CustomObject>