unpackaged/main/default/objects/Reports_Setting__mdt/fields/Country_List__c.field-meta.xml
<CustomField>
    <fullName>Country_List__c</fullName>
    <label>Country List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>