unpackaged/main/default/objects/Reports_Setting__mdt/fields/Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Distribution_List__c</fullName>
    <label>Distribution List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>